correction button name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="button-container">
                 <button class="btn btnWin" >Win</button>
                 <button class="btn btnLoose">Loose</button>
-                <button class="btn btnRefreshs">Refreshs</button>
+                <button class="btn btnRefreshs">Update</button>
             </div>
         </section>
         <section id="containGames" class="container" >
